[gd_scene load_steps=93 format=3 uid="uid://bneb3s6jpxx4y"]

[ext_resource type="Script" path="res://CharacterSelection/Scripts/CharacterSelect.gd" id="1_clw72"]
[ext_resource type="Texture2D" uid="uid://bg33eremmfpk5" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_000.png" id="2_s048o"]
[ext_resource type="Texture2D" uid="uid://bo6ba2qxl0tlf" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_001.png" id="3_bi40n"]
[ext_resource type="Texture2D" uid="uid://gwlruda3phu2" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_002.png" id="4_3vyau"]
[ext_resource type="Texture2D" uid="uid://b3k6aay7t5smx" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_003.png" id="5_nrleo"]
[ext_resource type="Texture2D" uid="uid://drn677y85yero" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_004.png" id="6_wjiij"]
[ext_resource type="Texture2D" uid="uid://dcyx06ftldaok" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_005.png" id="7_e8rtj"]
[ext_resource type="Texture2D" uid="uid://b8l78thqp48gr" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_006.png" id="8_qphfc"]
[ext_resource type="Texture2D" uid="uid://c2xi2ti06ybx7" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_007.png" id="9_1fch5"]
[ext_resource type="Texture2D" uid="uid://cg3yi1t3lbxlr" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_008.png" id="10_m27y6"]
[ext_resource type="Texture2D" uid="uid://o5gp3l5f67k0" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_009.png" id="11_s1e2m"]
[ext_resource type="Texture2D" uid="uid://cw65e7c1j0rst" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_010.png" id="12_buli6"]
[ext_resource type="Texture2D" uid="uid://bkm08x4sijbtw" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_011.png" id="13_f3ype"]
[ext_resource type="Texture2D" uid="uid://ygvwrn1lmkqa" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_012.png" id="14_qx3sj"]
[ext_resource type="Texture2D" uid="uid://cm7j7h0v266uw" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_013.png" id="15_pb7lx"]
[ext_resource type="Texture2D" uid="uid://sdnogtei5l6" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_014.png" id="16_50wda"]
[ext_resource type="Texture2D" uid="uid://dga8pnyj15uvi" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_015.png" id="17_2ttbi"]
[ext_resource type="Texture2D" uid="uid://bw3hlyx0deyih" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_016.png" id="18_rvrvb"]
[ext_resource type="Texture2D" uid="uid://ey5s1fks428i" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_017.png" id="19_bbhvj"]
[ext_resource type="Texture2D" uid="uid://j01emcgw0bbp" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_018.png" id="20_6018j"]
[ext_resource type="Texture2D" uid="uid://bexsudtjnspbp" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_019.png" id="21_sruyh"]
[ext_resource type="Texture2D" uid="uid://df1uvksuvvecl" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_020.png" id="22_63u4v"]
[ext_resource type="Texture2D" uid="uid://clvt7vcqrmlxe" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_021.png" id="23_8q0w5"]
[ext_resource type="Texture2D" uid="uid://dn7s2pk22gdvp" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_022.png" id="24_ych42"]
[ext_resource type="Texture2D" uid="uid://dx0v6uussol6u" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_023.png" id="25_p3ch1"]
[ext_resource type="Texture2D" uid="uid://bhd0li06qhi6x" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_024.png" id="26_52c2h"]
[ext_resource type="Texture2D" uid="uid://d05g0p1vg4p4w" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_025.png" id="27_fm0oj"]
[ext_resource type="Texture2D" uid="uid://ciiku0igd0c8i" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_026.png" id="28_olvir"]
[ext_resource type="Texture2D" uid="uid://c4dofeujoky07" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_027.png" id="29_peid0"]
[ext_resource type="Texture2D" uid="uid://bbsrwj81erudr" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_028.png" id="30_8ofu1"]
[ext_resource type="Texture2D" uid="uid://ba6w5btmpqj28" path="res://2DAnimationAssets/Artist/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_029.png" id="31_bgbt8"]
[ext_resource type="Texture2D" uid="uid://bn63foc5ibum3" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_000.png" id="32_kf0fb"]
[ext_resource type="Texture2D" uid="uid://ffd75rje7b3n" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_001.png" id="33_c37ul"]
[ext_resource type="Texture2D" uid="uid://b80wf3ocprnhb" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_002.png" id="34_3ht0i"]
[ext_resource type="Texture2D" uid="uid://wsgfbbm8hkvc" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_003.png" id="35_qhjcy"]
[ext_resource type="Texture2D" uid="uid://bjvh7q1j5cfyh" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_004.png" id="36_vgjma"]
[ext_resource type="Texture2D" uid="uid://dvbivcko785ch" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_005.png" id="37_4nhga"]
[ext_resource type="Texture2D" uid="uid://b21tjen12afmj" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_006.png" id="38_hwt2q"]
[ext_resource type="Texture2D" uid="uid://c142ocp7eb0kc" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_007.png" id="39_n8x8b"]
[ext_resource type="Texture2D" uid="uid://bbsipmucei7ot" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_008.png" id="40_tq3m6"]
[ext_resource type="Texture2D" uid="uid://b22k6jght7ipi" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_009.png" id="41_n28do"]
[ext_resource type="Texture2D" uid="uid://ck4bawexldg5i" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_010.png" id="42_1v64h"]
[ext_resource type="Texture2D" uid="uid://di46q31pke0hf" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_011.png" id="43_gom62"]
[ext_resource type="Texture2D" uid="uid://bgy8swmvhvwc4" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_012.png" id="44_ce1y6"]
[ext_resource type="Texture2D" uid="uid://b13e0sh2wj88d" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_013.png" id="45_x7yie"]
[ext_resource type="Texture2D" uid="uid://b5ofs1s6dp87m" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_014.png" id="46_mjyu0"]
[ext_resource type="Texture2D" uid="uid://hcv224d5y8qh" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_015.png" id="47_30xns"]
[ext_resource type="Texture2D" uid="uid://cjaka30w8qtko" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_016.png" id="48_vrnwj"]
[ext_resource type="Texture2D" uid="uid://djykl2nrptaq2" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_017.png" id="49_1xwlt"]
[ext_resource type="Texture2D" uid="uid://xojj4f7ovup8" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_018.png" id="50_wev31"]
[ext_resource type="Texture2D" uid="uid://fr055tj66uw2" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_019.png" id="51_hoy04"]
[ext_resource type="Texture2D" uid="uid://c3ghr4okfn488" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_020.png" id="52_r1i6b"]
[ext_resource type="Texture2D" uid="uid://dci3qr2ahee77" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_021.png" id="53_wrogk"]
[ext_resource type="Texture2D" uid="uid://ydjq8qbwmwx6" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_022.png" id="54_w607y"]
[ext_resource type="Texture2D" uid="uid://ccjuxt4k71jy" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_023.png" id="55_ynurq"]
[ext_resource type="Texture2D" uid="uid://ddvgwccyl6nub" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_024.png" id="56_yysc2"]
[ext_resource type="Texture2D" uid="uid://mbfkpaj4h6yb" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_025.png" id="57_sdm6p"]
[ext_resource type="Texture2D" uid="uid://cnnwrnlh6xdp3" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_026.png" id="58_uuphi"]
[ext_resource type="Texture2D" uid="uid://0yfp0w8ntva8" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_027.png" id="59_ophn0"]
[ext_resource type="Texture2D" uid="uid://dljrlyhf0jyea" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_028.png" id="60_ppvr7"]
[ext_resource type="Texture2D" uid="uid://d0yejmlalmhir" path="res://2DAnimationAssets/Astrologer/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_029.png" id="61_jgtor"]
[ext_resource type="Texture2D" uid="uid://b25do0ev01o6u" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_000.png" id="62_g56e7"]
[ext_resource type="Texture2D" uid="uid://cswwg745s2ub0" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_001.png" id="63_vgpr4"]
[ext_resource type="Texture2D" uid="uid://bc60iay2liecf" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_002.png" id="64_8f84g"]
[ext_resource type="Texture2D" uid="uid://hxayc4jxvc0k" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_003.png" id="65_817o1"]
[ext_resource type="Texture2D" uid="uid://be2w6lhgp4thh" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_004.png" id="66_ecwqk"]
[ext_resource type="Texture2D" uid="uid://fyhg7lyn2kma" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_005.png" id="67_l58po"]
[ext_resource type="Texture2D" uid="uid://db4amxum47kk" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_006.png" id="68_axbgy"]
[ext_resource type="Texture2D" uid="uid://b2pnf0uq4nqld" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_007.png" id="69_laval"]
[ext_resource type="Texture2D" uid="uid://m4qv2m5m0vyt" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_008.png" id="70_uk8f4"]
[ext_resource type="Texture2D" uid="uid://dmce6p6cyxghu" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_009.png" id="71_m4kc5"]
[ext_resource type="Texture2D" uid="uid://bc1bdfem0kekh" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_010.png" id="72_2iyxg"]
[ext_resource type="Texture2D" uid="uid://d05hcxoln4svn" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_011.png" id="73_e1q37"]
[ext_resource type="Texture2D" uid="uid://by8ewsxhmoi04" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_012.png" id="74_ga55n"]
[ext_resource type="Texture2D" uid="uid://bjl3j7d2jo40f" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_013.png" id="75_h54ok"]
[ext_resource type="Texture2D" uid="uid://6dbdmgh55ypt" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_014.png" id="76_4564q"]
[ext_resource type="Texture2D" uid="uid://b6wv01t5cbao" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_015.png" id="77_rf51i"]
[ext_resource type="Texture2D" uid="uid://btx1qwmbpa307" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_016.png" id="78_ssv65"]
[ext_resource type="Texture2D" uid="uid://btpgp1hn15drf" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_017.png" id="79_sm7kw"]
[ext_resource type="Texture2D" uid="uid://bv8se1uodfkvi" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_018.png" id="80_5frsh"]
[ext_resource type="Texture2D" uid="uid://bvrqh4og3sfng" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_019.png" id="81_c5aa0"]
[ext_resource type="Texture2D" uid="uid://g4e0q6erq84x" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_020.png" id="82_0e1qv"]
[ext_resource type="Texture2D" uid="uid://ukwwhrsuckbc" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_021.png" id="83_lafss"]
[ext_resource type="Texture2D" uid="uid://duibei6tn688" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_022.png" id="84_kup8s"]
[ext_resource type="Texture2D" uid="uid://dreka84jj3g7y" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_023.png" id="85_6x4ko"]
[ext_resource type="Texture2D" uid="uid://cl8885kogkw2f" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_024.png" id="86_7gw5e"]
[ext_resource type="Texture2D" uid="uid://becjwgbi0sqq4" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_025.png" id="87_1sffu"]
[ext_resource type="Texture2D" uid="uid://cen7y8edjuo3f" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_026.png" id="88_p3i0s"]
[ext_resource type="Texture2D" uid="uid://clc8cehu5cnrb" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_027.png" id="89_e20jm"]
[ext_resource type="Texture2D" uid="uid://uoi4lnj05h76" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_028.png" id="90_0vrv2"]
[ext_resource type="Texture2D" uid="uid://bgsqkv4633kib" path="res://2DAnimationAssets/Citizen/PNG/Front/PNG Sequences/Idle Blinking/0_Citizen_Idle Blinking_029.png" id="91_xf8xj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_icdfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s048o")
}, {
"duration": 1.0,
"texture": ExtResource("3_bi40n")
}, {
"duration": 1.0,
"texture": ExtResource("4_3vyau")
}, {
"duration": 1.0,
"texture": ExtResource("5_nrleo")
}, {
"duration": 1.0,
"texture": ExtResource("6_wjiij")
}, {
"duration": 1.0,
"texture": ExtResource("7_e8rtj")
}, {
"duration": 1.0,
"texture": ExtResource("8_qphfc")
}, {
"duration": 1.0,
"texture": ExtResource("9_1fch5")
}, {
"duration": 1.0,
"texture": ExtResource("10_m27y6")
}, {
"duration": 1.0,
"texture": ExtResource("11_s1e2m")
}, {
"duration": 1.0,
"texture": ExtResource("12_buli6")
}, {
"duration": 1.0,
"texture": ExtResource("13_f3ype")
}, {
"duration": 1.0,
"texture": ExtResource("14_qx3sj")
}, {
"duration": 1.0,
"texture": ExtResource("15_pb7lx")
}, {
"duration": 1.0,
"texture": ExtResource("16_50wda")
}, {
"duration": 1.0,
"texture": ExtResource("17_2ttbi")
}, {
"duration": 1.0,
"texture": ExtResource("18_rvrvb")
}, {
"duration": 1.0,
"texture": ExtResource("19_bbhvj")
}, {
"duration": 1.0,
"texture": ExtResource("20_6018j")
}, {
"duration": 1.0,
"texture": ExtResource("21_sruyh")
}, {
"duration": 1.0,
"texture": ExtResource("22_63u4v")
}, {
"duration": 1.0,
"texture": ExtResource("23_8q0w5")
}, {
"duration": 1.0,
"texture": ExtResource("24_ych42")
}, {
"duration": 1.0,
"texture": ExtResource("25_p3ch1")
}, {
"duration": 1.0,
"texture": ExtResource("26_52c2h")
}, {
"duration": 1.0,
"texture": ExtResource("27_fm0oj")
}, {
"duration": 1.0,
"texture": ExtResource("28_olvir")
}, {
"duration": 1.0,
"texture": ExtResource("29_peid0")
}, {
"duration": 1.0,
"texture": ExtResource("30_8ofu1")
}, {
"duration": 1.0,
"texture": ExtResource("31_bgbt8")
}],
"loop": true,
"name": &"artist",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_kf0fb")
}, {
"duration": 1.0,
"texture": ExtResource("33_c37ul")
}, {
"duration": 1.0,
"texture": ExtResource("34_3ht0i")
}, {
"duration": 1.0,
"texture": ExtResource("35_qhjcy")
}, {
"duration": 1.0,
"texture": ExtResource("36_vgjma")
}, {
"duration": 1.0,
"texture": ExtResource("37_4nhga")
}, {
"duration": 1.0,
"texture": ExtResource("38_hwt2q")
}, {
"duration": 1.0,
"texture": ExtResource("39_n8x8b")
}, {
"duration": 1.0,
"texture": ExtResource("40_tq3m6")
}, {
"duration": 1.0,
"texture": ExtResource("41_n28do")
}, {
"duration": 1.0,
"texture": ExtResource("42_1v64h")
}, {
"duration": 1.0,
"texture": ExtResource("43_gom62")
}, {
"duration": 1.0,
"texture": ExtResource("44_ce1y6")
}, {
"duration": 1.0,
"texture": ExtResource("45_x7yie")
}, {
"duration": 1.0,
"texture": ExtResource("46_mjyu0")
}, {
"duration": 1.0,
"texture": ExtResource("47_30xns")
}, {
"duration": 1.0,
"texture": ExtResource("48_vrnwj")
}, {
"duration": 1.0,
"texture": ExtResource("49_1xwlt")
}, {
"duration": 1.0,
"texture": ExtResource("50_wev31")
}, {
"duration": 1.0,
"texture": ExtResource("51_hoy04")
}, {
"duration": 1.0,
"texture": ExtResource("52_r1i6b")
}, {
"duration": 1.0,
"texture": ExtResource("53_wrogk")
}, {
"duration": 1.0,
"texture": ExtResource("54_w607y")
}, {
"duration": 1.0,
"texture": ExtResource("55_ynurq")
}, {
"duration": 1.0,
"texture": ExtResource("56_yysc2")
}, {
"duration": 1.0,
"texture": ExtResource("57_sdm6p")
}, {
"duration": 1.0,
"texture": ExtResource("58_uuphi")
}, {
"duration": 1.0,
"texture": ExtResource("59_ophn0")
}, {
"duration": 1.0,
"texture": ExtResource("60_ppvr7")
}, {
"duration": 1.0,
"texture": ExtResource("61_jgtor")
}],
"loop": true,
"name": &"astrologer",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("62_g56e7")
}, {
"duration": 1.0,
"texture": ExtResource("63_vgpr4")
}, {
"duration": 1.0,
"texture": ExtResource("64_8f84g")
}, {
"duration": 1.0,
"texture": ExtResource("65_817o1")
}, {
"duration": 1.0,
"texture": ExtResource("66_ecwqk")
}, {
"duration": 1.0,
"texture": ExtResource("67_l58po")
}, {
"duration": 1.0,
"texture": ExtResource("68_axbgy")
}, {
"duration": 1.0,
"texture": ExtResource("69_laval")
}, {
"duration": 1.0,
"texture": ExtResource("70_uk8f4")
}, {
"duration": 1.0,
"texture": ExtResource("71_m4kc5")
}, {
"duration": 1.0,
"texture": ExtResource("72_2iyxg")
}, {
"duration": 1.0,
"texture": ExtResource("73_e1q37")
}, {
"duration": 1.0,
"texture": ExtResource("74_ga55n")
}, {
"duration": 1.0,
"texture": ExtResource("75_h54ok")
}, {
"duration": 1.0,
"texture": ExtResource("76_4564q")
}, {
"duration": 1.0,
"texture": ExtResource("77_rf51i")
}, {
"duration": 1.0,
"texture": ExtResource("78_ssv65")
}, {
"duration": 1.0,
"texture": ExtResource("79_sm7kw")
}, {
"duration": 1.0,
"texture": ExtResource("80_5frsh")
}, {
"duration": 1.0,
"texture": ExtResource("81_c5aa0")
}, {
"duration": 1.0,
"texture": ExtResource("82_0e1qv")
}, {
"duration": 1.0,
"texture": ExtResource("83_lafss")
}, {
"duration": 1.0,
"texture": ExtResource("84_kup8s")
}, {
"duration": 1.0,
"texture": ExtResource("85_6x4ko")
}, {
"duration": 1.0,
"texture": ExtResource("86_7gw5e")
}, {
"duration": 1.0,
"texture": ExtResource("87_1sffu")
}, {
"duration": 1.0,
"texture": ExtResource("88_p3i0s")
}, {
"duration": 1.0,
"texture": ExtResource("89_e20jm")
}, {
"duration": 1.0,
"texture": ExtResource("90_0vrv2")
}, {
"duration": 1.0,
"texture": ExtResource("91_xf8xj")
}],
"loop": true,
"name": &"citizen",
"speed": 20.0
}]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource("1_clw72")

[node name="PlayerSelect" type="AnimatedSprite2D" parent="."]
position = Vector2(581, 290)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_icdfp")
animation = &"citizen"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 326)

[node name="Panel" type="Panel" parent="."]
visible = false
offset_right = 1151.0
offset_bottom = 648.0

[node name="Left" type="Button" parent="."]
offset_left = 265.0
offset_top = 320.0
offset_right = 360.0
offset_bottom = 371.0
text = "Left"

[node name="Right" type="Button" parent="."]
offset_left = 793.0
offset_top = 324.0
offset_right = 888.0
offset_bottom = 375.0
text = "Right
"

[node name="CharacterName" type="Label" parent="."]
offset_left = 521.0
offset_top = 70.0
offset_right = 644.0
offset_bottom = 110.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select" type="Button" parent="."]
offset_left = 537.0
offset_top = 566.0
offset_right = 614.0
offset_bottom = 608.0
text = "Select"

[node name="PlayerName" type="LineEdit" parent="."]
offset_left = 484.0
offset_top = 510.0
offset_right = 672.0
offset_bottom = 548.0
alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 535.0
offset_top = 468.0
offset_right = 627.0
offset_bottom = 498.0
text = "Enter Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NeedName" type="Label" parent="."]
offset_left = 699.0
offset_top = 509.0
offset_right = 842.0
offset_bottom = 544.0
vertical_alignment = 1

[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
